apps/base/mcps/chess-mcp.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: chess-mcp
  namespace: app-mcps

spec:
  selector:
    matchLabels:
      app: chess-mcp
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: chess-mcp
    spec:
      containers:
        - name: chess-mcp
          image: pab1it0/chess-mcp:latest
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 20
          ports:
            - containerPort: 8000
              name: http

---
apiVersion: v1
kind: Service
metadata:
  name: chess-mcp
  namespace: app-mcps

spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: chess-mcp
