apps/base/mcps/mcp-chess.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mcp-chess
  namespace: app-mcps

spec:
  selector:
    matchLabels:
      app: mcp-chess
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: mcp-chess
    spec:
      containers:
        - name: mcp-chess
          image: ghcr.io/jiayao/mcp-chess:latest
          imagePullPolicy: Always
          args:
            - --transport
            - sse
            - --host
            - "0.0.0.0"
            - --port
            - "8000"
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 20
          ports:
            - containerPort: 8000
              name: http

---
apiVersion: v1
kind: Service
metadata:
  name: mcp-chess
  namespace: app-mcps

spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: mcp-chess
