apps/base/mcps/mcp-grafana.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mcp-grafana
  namespace: app-mcps

spec:
  selector:
    matchLabels:
      app: mcp-grafana
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: mcp-grafana
    spec:
      containers:
        - name: mcp-grafana
          image: mcp/grafana:latest
          imagePullPolicy: Always
          args:
            - -t
            - sse
            - --address
            - "0.0.0.0:8000"
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 20
          ports:
            - containerPort: 8000
              name: http

---
apiVersion: v1
kind: Service
metadata:
  name: mcp-grafana
  namespace: app-mcps

spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: mcp-grafana
