apps/base/mcps/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mcp-grafana
  namespace: app-mcps

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`mcp-grafana.cluster.arpa`)
      kind: Rule
      services:
        - name: mcp-grafana
          namespace: app-mcps
          port: http
  tls:
    secretName: traefik-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mcp-chess
  namespace: app-mcps

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`mcp-chess.cluster.arpa`)
      kind: Rule
      services:
        - name: mcp-chess
          namespace: app-mcps
          port: http
  tls:
    secretName: traefik-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chess-mcp
  namespace: app-mcps

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`chess-mcp.cluster.arpa`)
      kind: Rule
      services:
        - name: chess-mcp
          namespace: app-mcps
          port: http
  tls:
    secretName: traefik-tls
